- Download agent from maven sonatype - Support for extended classes - Add support for Map values in methods for DirectInvoke - Add support for serializing Mono and Flux values in return values when using DirectInvoke - Add support for Double/Float value correct serialization when used in direct invoke new modules added for jackson - blackbird - afterburner (disabled) - mrbean - jakartaxmlbind - paranamer - kotlin